--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>openfin processes</title>
+  <style>
+    body {
+      min-width: 300px;
+    }
+  </style>
 </head>
 
 <body>
